# amxx-mariadb

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml  release.yml
src/: mariadb_async.cpp  mariadb_async.h  mariadb_connection.cpp  mariadb_connection.h  mariadb_handle_table.h  mariadb_module.cpp  mariadb_module.h  mariadb_mysql.h  mariadb_natives.cpp  mariadb_result.cpp  mariadb_result.h  mariadb_statement.cpp  mariadb_statement.h  moduleconfig.h  version.rc
src/pawn/include/: mariadb.inc  mariadb_dsn.inc
src/pawn/testsuite/: mariadb_dsn_test.sma  mariadb_sqlx_compare.sma  mariadb_test.sma
src/sdk/amxmodx/: amxxmodule.cpp  amxxmodule.h
